# tokenizers-swift

./: .gitignore  .swift-format  Cargo.toml  Makefile  Package.swift  README.md  build.rs  uniffi.toml
.github/workflows/: lib.yml
Plugins/CargoBuild/: CargoBuild.swift
Sources/Tokenizers/: Tokenizers.swift  Tokenizers_ext.swift
Sources/TokenizersFFI/include/: TokenizersFFI.h
Tests/TokenizersTests/: TokenizerTests.swift  TokenizersTests.swift
Tests/TokenizersTests/Files/: tokenizer-wiki.json
example/: Package.swift
example/Sources/PretrainedTokenizerExample/: PretrainedTokenizerExample.swift
example/Sources/TrainingTokenizerExample/: TrainingTokenizerExample.swift
example/cli/: Package.swift
example/cli/Sources/Example/: Example.swift
ffi/: .gitignore  Cargo.toml  Makefile  build.rs
ffi/src/: lib.rs
src/: error.rs  lib.rs  lib.udl  models.rs  pre_tokenizers.rs  tokenizer.rs  tokenizers_ext.swift  trainers.rs  utils.rs
src/models/: bpe.rs
