[package]
name = "tokenizers"
version = "0.1.0"
edition = "2021"
authors = ["Takanori Ishikawa <takanori.ishikawa@gmail.com>"]

[dependencies]
tokenizers = "^0.13"
uniffi = "0.21.0"
uniffi_macros = "0.21.0"
thiserror = "^1.0"
serde = { version = "1.0", features = [ "derive", "rc" ] }

[build-dependencies]
uniffi_build = {version = "0.21.0", features = [ "builtin-bindgen" ]}
uniffi_bindgen = "0.21.0"
camino = "1.0.8"

[lib]
crate-type = ["cdylib"]
